--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -172,3 +173,10 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+=======
+build/
+install/
+log/
+__pycache__/
+*.pyc
+nano .gitignore>>>>>>> 7d942a7 (Initial commit — ROS 2 Humble UAV workspace)
